[gd_scene load_steps=9 format=2]

[ext_resource path="res://gui/menus/stabe_menu/sprites/water.png" type="Texture" id=1]
[ext_resource path="res://gui/menus/stabe_menu/sprites/carriage.png" type="Texture" id=2]
[ext_resource path="res://gui/menus/stabe_menu/sprites/horse.png" type="Texture" id=3]
[ext_resource path="res://gui/menus/stabe_menu/StableShop.gd" type="Script" id=4]
[ext_resource path="res://data/player_stats/Nugget.tres" type="Resource" id=5]
[ext_resource path="res://data/player_stats/Water.tres" type="Resource" id=6]
[ext_resource path="res://data/player_stats/Cow.tres" type="Resource" id=7]
[ext_resource path="res://data/test_stats/PlayerVelocityTest.tres" type="Resource" id=8]

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 364.0
margin_top = 150.0
margin_right = 659.0
margin_bottom = 450.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 288.0
margin_bottom = 293.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 281.0
margin_bottom = 20.0
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 57.0
margin_top = 3.0
margin_right = 200.0
margin_bottom = 17.0
text = "Upgrade your carriage!"
align = 1

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 224.0
margin_bottom = 20.0
text = "X"

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 281.0
margin_bottom = 286.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 274.0
margin_bottom = 255.0
script = ExtResource( 4 )
player_nuggets = ExtResource( 5 )
player_water = ExtResource( 6 )
player_capacity = ExtResource( 7 )
player_velocity = ExtResource( 8 )

[node name="PlayerGold" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 267.0
margin_bottom = 14.0
custom_constants/separation = -1
alignment = 2

[node name="Text" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/PlayerGold"]
margin_left = 173.0
margin_right = 243.0
margin_bottom = 14.0
text = "Your Gold: "
align = 2

[node name="Gold" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/PlayerGold"]
margin_left = 242.0
margin_right = 258.0
margin_bottom = 14.0
text = "50"
align = 2

[node name="Symbol" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/PlayerGold"]
margin_left = 257.0
margin_right = 267.0
margin_bottom = 14.0
text = "N"
align = 2

[node name="WaterUpgrade" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 267.0
margin_bottom = 92.0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/WaterUpgrade"]
margin_right = 64.0
margin_bottom = 74.0
texture = ExtResource( 1 )

[node name="Description" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/WaterUpgrade"]
margin_left = 68.0
margin_right = 267.0
margin_bottom = 74.0
size_flags_horizontal = 7
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/WaterUpgrade/Description"]
margin_right = 199.0
margin_bottom = 14.0
text = "Upgrade your water capacity!"

[node name="UpgradeValueLabels" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/WaterUpgrade/Description"]
margin_top = 18.0
margin_right = 199.0
margin_bottom = 32.0
custom_constants/separation = -1

[node name="Text" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/WaterUpgrade/Description/UpgradeValueLabels"]
margin_right = 111.0
margin_bottom = 14.0
text = "Water Capacity: +"

[node name="Value" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/WaterUpgrade/Description/UpgradeValueLabels"]
margin_left = 110.0
margin_right = 126.0
margin_bottom = 14.0
text = "25"

[node name="UpgradeCostLabels" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/WaterUpgrade/Description"]
margin_top = 36.0
margin_right = 199.0
margin_bottom = 50.0
custom_constants/separation = -1

[node name="Text" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/WaterUpgrade/Description/UpgradeCostLabels"]
margin_right = 36.0
margin_bottom = 14.0
text = "Cost: "

[node name="Cost" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/WaterUpgrade/Description/UpgradeCostLabels"]
margin_left = 35.0
margin_right = 51.0
margin_bottom = 14.0
text = "10"

[node name="Symbol" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/WaterUpgrade/Description/UpgradeCostLabels"]
margin_left = 50.0
margin_right = 60.0
margin_bottom = 14.0
text = "N"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/WaterUpgrade/Description"]
margin_left = 51.0
margin_top = 54.0
margin_right = 148.0
margin_bottom = 74.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Buy Upgrade!"

[node name="CapacityUpgrade" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 267.0
margin_bottom = 170.0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/CapacityUpgrade"]
margin_right = 64.0
margin_bottom = 74.0
texture = ExtResource( 2 )

[node name="Description" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/CapacityUpgrade"]
margin_left = 68.0
margin_right = 267.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/CapacityUpgrade/Description"]
margin_right = 199.0
margin_bottom = 14.0
text = "Upgrade your carrying capacity!"

[node name="UpgradeValueLabels" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/CapacityUpgrade/Description"]
margin_top = 18.0
margin_right = 199.0
margin_bottom = 32.0
custom_constants/separation = -1

[node name="Text" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/CapacityUpgrade/Description/UpgradeValueLabels"]
margin_right = 124.0
margin_bottom = 14.0
text = "Carrying Capacity: +"

[node name="Value" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/CapacityUpgrade/Description/UpgradeValueLabels"]
margin_left = 123.0
margin_right = 131.0
margin_bottom = 14.0
text = "1"

[node name="UpgradeCostLabels" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/CapacityUpgrade/Description"]
margin_top = 36.0
margin_right = 199.0
margin_bottom = 50.0
custom_constants/separation = -1

[node name="Text" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/CapacityUpgrade/Description/UpgradeCostLabels"]
margin_right = 36.0
margin_bottom = 14.0
text = "Cost: "

[node name="Cost" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/CapacityUpgrade/Description/UpgradeCostLabels"]
margin_left = 35.0
margin_right = 51.0
margin_bottom = 14.0
text = "10"

[node name="Symbol" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/CapacityUpgrade/Description/UpgradeCostLabels"]
margin_left = 50.0
margin_right = 60.0
margin_bottom = 14.0
text = "N"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/CapacityUpgrade/Description"]
margin_left = 51.0
margin_top = 54.0
margin_right = 148.0
margin_bottom = 74.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Buy Upgrade!"

[node name="VelocityUpgrade" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 267.0
margin_bottom = 248.0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VelocityUpgrade"]
margin_right = 64.0
margin_bottom = 74.0
texture = ExtResource( 3 )

[node name="Description" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VelocityUpgrade"]
margin_left = 68.0
margin_right = 267.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VelocityUpgrade/Description"]
margin_right = 199.0
margin_bottom = 14.0
text = "Upgrade your speed!"

[node name="UpgradeValueLabels" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VelocityUpgrade/Description"]
margin_top = 18.0
margin_right = 199.0
margin_bottom = 32.0
custom_constants/separation = -1

[node name="Text" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VelocityUpgrade/Description/UpgradeValueLabels"]
margin_right = 55.0
margin_bottom = 14.0
text = "Speed: +"

[node name="Value" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VelocityUpgrade/Description/UpgradeValueLabels"]
margin_left = 54.0
margin_right = 74.0
margin_bottom = 14.0
text = "1.5"

[node name="UpgradeCostLabels" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VelocityUpgrade/Description"]
margin_top = 36.0
margin_right = 199.0
margin_bottom = 50.0
custom_constants/separation = -1

[node name="Text" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VelocityUpgrade/Description/UpgradeCostLabels"]
margin_right = 36.0
margin_bottom = 14.0
text = "Cost: "

[node name="Cost" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VelocityUpgrade/Description/UpgradeCostLabels"]
margin_left = 35.0
margin_right = 51.0
margin_bottom = 14.0
text = "10"

[node name="Symbol" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VelocityUpgrade/Description/UpgradeCostLabels"]
margin_left = 50.0
margin_right = 60.0
margin_bottom = 14.0
text = "N"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VelocityUpgrade/Description"]
margin_left = 51.0
margin_top = 54.0
margin_right = 148.0
margin_bottom = 74.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Buy Upgrade!"

[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/WaterUpgrade/Description/Button" to="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer" method="_on_upgrade_button1_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/CapacityUpgrade/Description/Button" to="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer" method="_on_upgrade_button2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VelocityUpgrade/Description/Button" to="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer" method="_on_upgrade_button3_pressed"]
